examples/test/testpolicy9289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9289
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key16: value41
      key41: value47
      key17: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value44
      podSelector:
        matchLabels:
          key42: value46
